...
  );

  return (
    <View style={{ flex: 1 }}>
      <View style={styles.header}>
        <TouchableOpacity
          testID="home_icon"
          accessibilityLabel="home_icon"
          onPress={() => navigation.goBack()}
        >
          <Image
            style={{ height: 30, width: 30 }}
            source={require('../assets/images/goBack.png')}
          />
        </TouchableOpacity>

        <Text style={styles.title}>Cart</Text>
      </View>

      {cart.length === 0 ? (
        <View style={styles.empty}>
          <Text>No items in cart</Text>
        </View>
...
