...
  return (
    <View style={{ flex: 1 }}>
      <View style={styles.header}>
        <Text style={styles.title}>Home</Text>
        <View style={styles.icons}>
          <TouchableOpacity
            testID="cart_icon"
            accessibilityLabel="cart_icon"
            onPress={() => navigation.navigate('Cart')}
            style={{ marginRight: 15 }}
          >
            <Image
              style={{ height: 30, width: 30 }}
...
