appId: com.shoppingapp
---
- launchApp

- assertVisible:
    id: "product_1_add_button"

- assertVisible:
    id: "product_4_add_button"

- tapOn:
    id: "product_4_add_button"

- tapOn:
    id: "cart_icon"

- assertVisible:
    text: "Cart"

- tapOn:
    id: "cart_item_delete_1"

- tapOn:
    id: "home_icon"
